- updated bonjour to be able to publish services - updated Program.cs to show how to publish and resolve services
git-svn-id: https://bonjour.svn.codeplex.com/svn@1577 a83551a4-30f6-4d81-a974-c6ced450ddbf

--- a/Bonjour.NET/Bonjour.NET.csproj
+++ b/Bonjour.NET/Bonjour.NET.csproj
@@ -51,11 +51,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\DnsResolver\DnsResolver.csproj">
+    <ProjectReference Include="..\DnsResolver\DnsResolver.csproj">
       <Project>{36528547-53DC-46CD-8C97-1BAE69262B00}</Project>
       <Name>DnsResolver</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Services.NET.csproj">
+    <ProjectReference Include="..\SD\Services.NET.csproj">
       <Project>{2B2D41E0-DBC7-4075-873C-394D02448281}</Project>
       <Name>Services.NET</Name>
     </ProjectReference>
