--- a/SD/Services.NET.csproj
+++ b/SD/Services.NET.csproj
@@ -39,9 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HubServiceResolver.cs" />
+    <Compile Include="IExpirable.cs" />
     <Compile Include="IService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IServiceResolver.cs" />
+    <Compile Include="TtlCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DnsResolver\DnsResolver.csproj">
