--- a/SD/Network.ZeroConf.csproj
+++ b/SD/Network.ZeroConf.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5E066080-8EC9-47B8-A1D3-171D06829484}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{2B2D41E0-DBC7-4075-873C-394D02448281}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UPnPReader</RootNamespace>
-    <AssemblyName>UPnPReader</AssemblyName>
+    <RootNamespace>Network.ZeroConf</RootNamespace>
+    <AssemblyName>Services.NET</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -35,35 +35,22 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="HubServiceResolver.cs" />
+    <Compile Include="IExpirable.cs" />
+    <Compile Include="IService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IServiceResolver.cs" />
+    <Compile Include="TtlCollection.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Rest\Network.Rest.csproj">
-      <Project>{3FFE9D8C-3914-4DD1-BB7C-8D4359216806}</Project>
-      <Name>Network.Rest</Name>
+    <ProjectReference Include="..\DnsResolver\Network.Dns.csproj">
+      <Project>{36528547-53DC-46CD-8C97-1BAE69262B00}</Project>
+      <Name>Network.Dns</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SD\Network.ZeroConf.csproj">
-      <Project>{2B2D41E0-DBC7-4075-873C-394D02448281}</Project>
-      <Name>Network.ZeroConf</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UPnP\Network.UPnP.Services.csproj">
-      <Project>{39E23211-B902-4FE9-8A61-264F81D63864}</Project>
-      <Name>Network.UPnP.Services</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
