--- a/MEF.Bonjour.Tests/MEF.Bonjour.Tests.csproj
+++ b/MEF.Bonjour.Tests/MEF.Bonjour.Tests.csproj
@@ -5,13 +5,14 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2B2D41E0-DBC7-4075-873C-394D02448281}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{770EE8FF-624F-445F-A6ED-B29E2DAFA591}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Network.ZeroConf</RootNamespace>
-    <AssemblyName>Services.NET</AssemblyName>
+    <RootNamespace>MEF.Bonjour.Tests</RootNamespace>
+    <AssemblyName>MEF.Bonjour.Tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <StartupObject>MEF.Bonjour.Tests.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,6 +33,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition, Version=2009.1.23.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\bin\System.ComponentModel.Composition.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -39,18 +44,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HubServiceResolver.cs" />
-    <Compile Include="IExpirable.cs" />
-    <Compile Include="IService.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IServiceResolver.cs" />
-    <Compile Include="ResolverHelper.cs" />
-    <Compile Include="TtlCollection.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DnsResolver\Network.Dns.csproj">
-      <Project>{36528547-53DC-46CD-8C97-1BAE69262B00}</Project>
-      <Name>Network.Dns</Name>
+    <ProjectReference Include="..\Bonjour.NET\Network.Bonjour.csproj">
+      <Project>{CA2E95A3-CF9D-4524-85FC-12CAD9D81479}</Project>
+      <Name>Network.Bonjour</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MEF.Bonjour\MEF.Bonjour.csproj">
+      <Project>{94D114DE-DA48-4060-9B7A-3059BF75E87D}</Project>
+      <Name>MEF.Bonjour</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SD\Network.ZeroConf.csproj">
+      <Project>{2B2D41E0-DBC7-4075-873C-394D02448281}</Project>
+      <Name>Network.ZeroConf</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
