--- a/MEF.Bonjour.Tests/MEF.Bonjour.Tests.csproj
+++ b/MEF.Bonjour.Tests/MEF.Bonjour.Tests.csproj
@@ -35,7 +35,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition, Version=2009.1.23.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\bin\System.ComponentModel.Composition.dll</HintPath>
+      <HintPath>..\System.ComponentModel.Composition.dll</HintPath>
     </Reference>
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
