--- a/DLNA/Network.UPnP.DLNA.csproj
+++ b/DLNA/Network.UPnP.DLNA.csproj
@@ -12,6 +12,10 @@
     <AssemblyName>Network.UPnP.DLNA</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,9 +54,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Rest\Network.Rest.csproj">
-      <Project>{3FFE9D8C-3914-4DD1-BB7C-8D4359216806}</Project>
+    <ProjectReference Include="..\Network.Rest\Network.Rest.csproj">
+      <Project>{13A68F9C-F095-409E-A97D-A05FFCDCE210}</Project>
       <Name>Network.Rest</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Network\Network.csproj">
+      <Project>{C05DF064-DD81-49AE-91D2-9D8BBCC76F1F}</Project>
+      <Name>Network %28Network\Network%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\UPnP\Network.UPnP.Services.csproj">
       <Project>{39E23211-B902-4FE9-8A61-264F81D63864}</Project>
