Corrected a bug in bonjour Added a client to Network project Corrected Upnp implementation Getting available actions on upnp services
git-svn-id: https://bonjour.svn.codeplex.com/svn@56986 a83551a4-30f6-4d81-a974-c6ced450ddbf

--- a/Network/Network.csproj
+++ b/Network/Network.csproj
@@ -71,6 +71,7 @@
   <ItemGroup>
     <Compile Include="BinaryRequest.cs" />
     <Compile Include="BinaryResponse.cs" />
+    <Compile Include="Client.cs" />
     <Compile Include="Command.cs" />
     <Compile Include="CommandDescriptor.cs" />
     <Compile Include="CommandFactory.cs" />
